dsl/generated-sources/pointdb/lidarindicesdsl/LidarIndicesDSLParser.java
// Generated from LidarIndicesDSL.g4 by ANTLR 4.4
package pointdb.lidarindicesdsl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LidarIndicesDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ID=1, WS=2, SEPERATOR=3;
	public static final String[] tokenNames = {
		"<INVALID>", "ID", "WS", "SEPERATOR"
	};
	public static final int
		RULE_index_scirpt = 0, RULE_index_sequence = 1, RULE_index = 2;
	public static final String[] ruleNames = {
		"index_scirpt", "index_sequence", "index"
	};

	@Override
	public String getGrammarFileName() { return "LidarIndicesDSL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LidarIndicesDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Index_scirptContext extends ParserRuleContext {
		public TerminalNode WS(int i) {
			return getToken(LidarIndicesDSLParser.WS, i);
		}
		public Index_sequenceContext index_sequence() {
			return getRuleContext(Index_sequenceContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LidarIndicesDSLParser.EOF, 0); }
		public List<TerminalNode> WS() { return getTokens(LidarIndicesDSLParser.WS); }
		public Index_scirptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_scirpt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LidarIndicesDSLVisitor ) return ((LidarIndicesDSLVisitor<? extends T>)visitor).visitIndex_scirpt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_scirptContext index_scirpt() throws RecognitionException {
		Index_scirptContext _localctx = new Index_scirptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_index_scirpt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(6); match(WS);
				}
			}

			setState(9); index_sequence();
			setState(11);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(10); match(WS);
				}
			}

			setState(13); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Index_sequenceContext extends ParserRuleContext {
		public IndexContext index(int i) {
			return getRuleContext(IndexContext.class,i);
		}
		public TerminalNode WS(int i) {
			return getToken(LidarIndicesDSLParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(LidarIndicesDSLParser.WS); }
		public List<TerminalNode> SEPERATOR() { return getTokens(LidarIndicesDSLParser.SEPERATOR); }
		public List<IndexContext> index() {
			return getRuleContexts(IndexContext.class);
		}
		public TerminalNode SEPERATOR(int i) {
			return getToken(LidarIndicesDSLParser.SEPERATOR, i);
		}
		public Index_sequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index_sequence; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LidarIndicesDSLVisitor ) return ((LidarIndicesDSLVisitor<? extends T>)visitor).visitIndex_sequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Index_sequenceContext index_sequence() throws RecognitionException {
		Index_sequenceContext _localctx = new Index_sequenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_index_sequence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(15); index();
			setState(26);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(17);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(16); match(WS);
						}
					}

					setState(19); match(SEPERATOR);
					setState(21);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(20); match(WS);
						}
					}

					setState(23); index();
					}
					} 
				}
				setState(28);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LidarIndicesDSLParser.ID, 0); }
		public IndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LidarIndicesDSLVisitor ) return ((LidarIndicesDSLVisitor<? extends T>)visitor).visitIndex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IndexContext index() throws RecognitionException {
		IndexContext _localctx = new IndexContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_index);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}